syntax = "proto3";
package pb_perf;

// A job config for the load testing.
message JobConfig {
  // On premise source directory.
  string sourceDir = 1;

  // GCS bucket, will create a random bucket if empty.
  string destinationBucket = 2;
}

message LoadTestingConfiguration {
  // Friendly name of the load testing configuration. Used to identify the job
  // configs created in the system.
  string name = 1;

  // List of job configs for the load test.
  repeated JobConfig config = 2;
}
